[package]
name = "async-snmp"
version = "0.13.0"
edition = "2024"
rust-version = "1.88"
description = "Modern async-first SNMP client library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lukeod/async-snmp"
documentation = "https://docs.rs/async-snmp"
readme = "README.md"
keywords = ["snmp", "network", "async", "monitoring"]
categories = ["network-programming", "asynchronous"]

[package.metadata.docs.rs]
features = ["agent", "crypto-rustcrypto", "cli", "mib", "rt-multi-thread"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = "1.11.0"
futures-core = "0.3.31"
smallvec = "1.15.1"
socket2 = "0.6"
quinn-udp = { version = "0.6", optional = true }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net", "time", "sync", "rt", "macros", "io-util"] }
tokio-util = "0.7"
tracing = "0.1.44"

# CLI dependencies (optional)
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# MIB integration (optional)
mib-rs = { version = "0.8", optional = true, default-features = false }

# V3 crypto dependencies (FIPS backend)
aws-lc-rs = { version = "1", optional = true, features = ["fips"] }

# V3 crypto dependencies
getrandom = "0.4"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }
aes = { version = "0.9.0", optional = true }
cbc = { version = "0.2.0", optional = true }
cfb-mode = { version = "0.9.0", optional = true }
des = { version = "0.9.0", optional = true }
digest = { version = "0.11.2", optional = true }
hmac = { version = "0.13.0", optional = true }
md-5 = { version = "0.11.0", optional = true }
sha1 = { version = "0.11.0", optional = true }
sha2 = { version = "0.11.0", optional = true }

[dev-dependencies]
testcontainers = "0.27"
proptest = "1.9"
dirs = "6.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.8", features = ["async_tokio"] }
futures = "0.3"
hdrhistogram = "7"
dhat = "0.3"
parking_lot = "0.12"

[profile.profiling]
inherits = "release"
debug = true


[[bench]]
name = "ber"
harness = false

[[bench]]
name = "oid"
harness = false

[[bench]]
name = "client"
harness = false

[[bench]]
name = "v3"
harness = false

[[bench]]
name = "transport_comparison"
harness = false

[features]
default = ["agent", "crypto-rustcrypto"]
agent = ["dep:quinn-udp"]  # SNMP agent
crypto-rustcrypto = [
    "dep:aes", "dep:cbc", "dep:cfb-mode", "dep:des",
    "dep:digest", "dep:hmac", "dep:md-5", "dep:sha1", "dep:sha2",
]
crypto-fips = ["dep:aws-lc-rs"]
rt-multi-thread = ["tokio/rt-multi-thread"]  # Multi-threaded tokio runtime
cli = ["dep:clap", "dep:serde", "dep:serde_json", "dep:tracing-subscriber"]  # CLI utilities
mib = ["dep:mib-rs"]       # MIB integration (OID conversions, helpers)
tls = []      # Future: SNMP over TLS (RFC 6353)
dtls = []     # Future: SNMP over DTLS (RFC 6353)

[[bin]]
name = "asnmp-get"
path = "src/bin/asnmp_get.rs"
required-features = ["cli"]

[[bin]]
name = "asnmp-walk"
path = "src/bin/asnmp_walk.rs"
required-features = ["cli"]

[[bin]]
name = "asnmp-set"
path = "src/bin/asnmp_set.rs"
required-features = ["cli"]

[[example]]
name = "mib_get"
required-features = ["mib"]

[[example]]
name = "mib_walk"
required-features = ["mib"]

[[example]]
name = "mib_table"
required-features = ["mib"]
